[package]
name = "requests"
version = "0.1.0"
authors = ["Andy Gnias <AGnias47@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"
